--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
   },
   "homepage": "https://github.com/fuyushimoya/personal-test-web",
   "dependencies": {
-    "express": "^4.12.4",
+    "express": "^4.13.0",
     "express-handlebars": "^2.0.1",
-    "jquery": "^2.1.4",
-    "lodash": "^3.9.1"
+    "node-libs-browser": "^0.5.2",
+    "webpack": "^1.10.0"
   },
   "devDependencies": {
-    "node-libs-browser": "^0.5.0",
     "webpack": "^1.9.7"
   },
   "jshintConfig": {
